src/Services/adminServices/stationeryServices/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stationery-service
  labels:
    name: stationery-service
