src/Services/adminServices/stationeryServices/k8s/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stationery-service
  labels:
    name: stationery-service
    environment: production
