src/Services/adminServices/stationeryServices/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stationery-service
  namespace: stationery-service
  labels:
    app: stationery-service
spec:
  type: LoadBalancer
  selector:
    app: stationery-service
  ports:
  - name: http
    port: 80
    targetPort: 5181
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
apiVersion: v1
kind: Service
metadata:
  name: stationery-service-internal
  namespace: stationery-service
  labels:
    app: stationery-service
spec:
  type: ClusterIP
  selector:
    app: stationery-service
  ports:
  - name: http
    port: 5181
    targetPort: 5181
    protocol: TCP
